# xarm_1s

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/xarm_1s_description/share/ament_index/resource_index/parent_prefix_path/: xarm_1s_description
install/xarm_1s_description/share/xarm_1s_description/: local_setup.sh  package.sh  package.xml
install/xarm_1s_description/share/xarm_1s_description/launch/: xarm_1s_display.launch.py
install/xarm_1s_description/share/xarm_1s_description/rviz/: rviz_sim.rviz
install/xarm_1s_description/share/xarm_1s_description/urdf/: xarm_1s.urdf  xarm_1s.urdf.xacro
install/xarm_1s_hardware_interface/include/include/xarm_1s_hardware_interface/: hardware_interface.hpp  servo.hpp  util.hpp  xarm.hpp
install/xarm_1s_hardware_interface/share/ament_index/resource_index/parent_prefix_path/: xarm_1s_hardware_interface
install/xarm_1s_hardware_interface/share/xarm_1s_hardware_interface/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/xarm_1s_hardware_interface/share/xarm_1s_hardware_interface/cmake/: ament_cmake_export_include_directories-extras.cmake
install/xarm_1s_hardware_interface/share/xarm_1s_hardware_interface/config/: robot_arm_controllers.yaml
install/xarm_1s_joy/lib/xarm_1s_joy/: game_pad
install/xarm_1s_joy/share/ament_index/resource_index/package_run_dependencies/: xarm_1s_joy
install/xarm_1s_joy/share/xarm_1s_joy/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/xarm_1s_joy/share/xarm_1s_joy/cmake/: xarm_1s_joyConfig.cmake
install/xarm_1s_kinematics/lib/xarm_1s_kinematics/: geometry_publisher  kinematics_solver
install/xarm_1s_kinematics/share/ament_index/resource_index/package_run_dependencies/: xarm_1s_kinematics
install/xarm_1s_kinematics/share/xarm_1s_kinematics/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/xarm_1s_messages/include/xarm_1s_messages/xarm_1s_messages/msg/: joy_msg.hpp  (+1 more)
install/xarm_1s_messages/share/xarm_1s_messages/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/xarm_1s_messages/share/xarm_1s_messages/cmake/: ament_cmake_export_targets-extras.cmake  export_xarm_1s_messages__rosidl_generator_cppExport.cmake  export_xarm_1s_messages__rosidl_generator_pyExport.cmake  export_xarm_1s_messages__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_xarm_1s_messages__rosidl_typesupport_fastrtps_cExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  xarm_1s_messages__rosidl_typesupport_cppExport-noconfig.cmake  xarm_1s_messages__rosidl_typesupport_cppExport.cmake  xarm_1s_messages__rosidl_typesupport_introspection_cExport-noconfig.cmake  xarm_1s_messages__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/xarm_1s_messages/share/xarm_1s_messages/msg/: JoyMsg.idl
install/xarm_hardware_interface/lib/xarm_hardware_interface/: hardware_controller
install/xarm_hardware_interface/share/xarm_hardware_interface/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build  latest_list
src/: README.md  READMe.md  gamepad_simulator.py  hidapi_test  tes.py  test.c  test_xarm
src/xarm_1s_description/: CMakeLists.txt
src/xarm_1s_description/launch/: xarm_1s_display.launch.py  xarm_1s_ros2_control.launch.py
src/xarm_1s_description/meshes/: humerus.stl:Zone.Identifier
src/xarm_1s_description/urdf/: xarm_1s.urdf.xacro  xarm_1s_ros2_control.xacro
src/xarm_1s_hardware_interface/: CMakeLists.txt  robotic_arm_hw_plugin.xml
src/xarm_1s_hardware_interface/config/: robot_arm_controllers.yaml
src/xarm_1s_hardware_interface/include/xarm_1s_hardware_interface/: hardware_interface.hpp
src/xarm_1s_hardware_interface/src/: hardware_interface.cpp  servo.cpp  util.cpp  xarm.cpp
src/xarm_1s_joy/: CMakeLists.txt
src/xarm_1s_joy/src/: game_pad.cpp
src/xarm_1s_kinematics/: CMakeLists.txt
src/xarm_1s_kinematics/src/: xarm_1s_give_position.cpp  xarm_1s_kinematics.cpp
src/xarm_1s_messages/: CMakeLists.txt  package.xml
src/xarm_1s_messages/msg/: JoyMsg.msg
src/xarm_hardware_interface/: package.xml  setup.cfg  setup.py
src/xarm_hardware_interface/xarm_hardware_interface/: xarm_hardware_interface.py
(+9 files in other folders)
